--- a/roles/galaxy-docker/tasks/provision/import/delete_empty_db_script.yml
+++ b/roles/galaxy-docker/tasks/provision/import/delete_empty_db_script.yml
@@ -1,4 +1,4 @@
-- name: Create script to delete old database and create new empty database
+- name: Delete script to delete old database and create new empty database
   file:
     path: "{{galaxy_docker_empty_database_script}}"
     state: absent
