--- a/roles/galaxy-docker/tasks/backups/cronbackupdb.yml
+++ b/roles/galaxy-docker/tasks/backups/cronbackupdb.yml
@@ -39,7 +39,7 @@
     backup_db_location: "{{galaxy_docker_backup_location}}/{{item.key}}"
     backup_db_dump_file: "galaxy-{{item.key}}-backup$(TZ='UTC' date +'%s.%N')"
     files_to_keep: "{{item.value.files_to_keep}}"
-    compression_level: "{{item.value.compression_level | default(6)}}"
+    compression_level: "{{item.value.compression_level | default(galaxy_docker_db_compression_level)}}"
     name: "{{item.key}}"
   with_dict: "{{ backupdb_cron_jobs }}"
 
