--- a/roles/galaxy-docker/tasks/backups/extractdb.yml
+++ b/roles/galaxy-docker/tasks/backups/extractdb.yml
@@ -57,7 +57,7 @@
   shell: "docker exec -u {{user}} {{name}} {{command}} >> {{file}}"
   vars:
     name: "{{docker_container_name}}"
-    command: "pg_dump {{galaxy_docker_container_database_name}} -F c -Z {{galaxy_docker_extracted_db_compression_level}}"
+    command: "pg_dump {{galaxy_docker_container_database_name}} --format={{galaxy_docker_db_format}} -Z {{galaxy_docker_db_compression_level}}"
     user: "{{galaxy_docker_database_user}}"
     file: "{{galaxy_docker_extracted_db_location}}/{{galaxy_docker_extracted_db_filename}}"
   register: output
