fixed restore command

--- a/roles/galaxy-docker/defaults/main.yml
+++ b/roles/galaxy-docker/defaults/main.yml
@@ -99,7 +99,8 @@ delete_backup_files: False
 ## If format is set to plain, it is by default not compressed and psql is used to recover.
 galaxy_docker_db_format: "custom" # other options 'plain' and 'tar'
 galaxy_docker_db_compression_level: "{{(galaxy_docker_db_format=='custom') | ternary('6','0')}}"
-galaxy_docker_db_restore_command: "{{(galaxy_docker_db_format=='plain') | ternary('psql -d {{galaxy_docker_container_database_name}} -f','pg_restore -v')}}"
+galaxy_docker_db_restore_command: "{{(galaxy_docker_db_format=='plain') | ternary('psql','pg_restore -v')}}"
+galaxy_docker_db_input_file_flag: "{{(galaxy_docker_db_format=='plain') | ternary('-f','')}}"
 
 galaxy_docker_extracted_db_filename: "galaxy_database.{{ansible_date_time.iso8601}}.dump"
 galaxy_docker_extracted_db_location: "/home/{{galaxy_docker_docker_user}}/database_extract"
