--- a/roles/galaxy-docker/tasks/provision/import/transfer_database.yml
+++ b/roles/galaxy-docker/tasks/provision/import/transfer_database.yml
@@ -20,5 +20,12 @@
     src: "{{galaxy_docker_import_db_dir}}/{{galaxy_docker_imported_db}}"
     perms: yes
     compress: yes
-#  vars:
-#    ansible_ssh_pipelining: False #otherwise synchronize does not work
+
+# Not necessary when connected as the galaxy user. Which is the default in non-privileged mode.
+- name: set ownership rights correctly
+  file:
+    path: "{{galaxy_docker_imported_db_location}}/{{galaxy_docker_imported_db}}"
+    owner: "{{galaxy_docker_web_user}}"
+  become: yes
+  become_user: root
+  when: galaxy_docker_run_privileged
