--- a/roles/galaxy-docker/defaults/main.yml
+++ b/roles/galaxy-docker/defaults/main.yml
@@ -14,19 +14,21 @@ galaxy_docker_remote_key_dir: /tmp/keys
 #users
 galaxy_docker_docker_user: galaxy_docker
 galaxy_docker_docker_user_private_key: "{{ssh_dir}}/{{galaxy_docker_docker_user}}"
-galaxy_docker_docker_user_virtualenv: "/home/{{galaxy_docker_docker_user}}/virtualenv"
-galaxy_docker_backup_location: "/home/{{galaxy_docker_docker_user}}/backups"
+galaxy_docker_docker_user_virtualenv: "{{galaxy_docker_docker_user_home}}/virtualenv"
+galaxy_docker_docker_user_home: "/home/{{galaxy_docker_docker_user}}"
 
 galaxy_docker_database_user: postgres
 galaxy_docker_database_user_id: 1550
 galaxy_docker_database_group_id: 1550
 galaxy_docker_database_user_private_key: "{{ssh_dir}}/{{galaxy_docker_database_user}}"
+galaxy_docker_database_user_home: "/home/{{galaxy_docker_database_user}}"
 
 galaxy_docker_web_user: galaxy
 galaxy_docker_web_user_id: 1450
 galaxy_docker_web_group_id: 1450
 galaxy_docker_web_user_private_key: "{{ssh_dir}}/{{galaxy_docker_web_user}}"
-galaxy_docker_web_user_virtualenv: "/home/{{galaxy_docker_web_user}}/virtualenv"
+galaxy_docker_web_user_virtualenv: "{{galaxy_docker_web_user_home}}/virtualenv"
+galaxy_docker_web_user_home: "/home/{{galaxy_docker_web_user}}"
 
 galaxy_docker_provision_user: admin@galaxy.org
 galaxy_docker_provision_key: admin
@@ -34,14 +36,14 @@ galaxy_docker_provision_key: admin
 # docker defaults
 galaxy_docker_docker_user_groups: docker
 docker_image: bgruening/galaxy-stable
-docker_environment_file_location: "/home/{{galaxy_docker_docker_user}}/galaxydocker.env"
+docker_environment_file_location: "{{galaxy_docker_docker_user_home}}/galaxydocker.env"
 docker_export_location: "/data/galaxy/galaxy_storage"
 galaxy_docker_export_location_mode: "0755" # If not accessible for all users (--x) then postgres does not work.
 docker_container_name: galaxy
 docker_provision_container_name: galaxy-provision
 docker_container_hostname: galaxy-docker
 docker_extra_volumes: ""
-docker_build_dir: "/home/{{galaxy_docker_docker_user}}/docker_build/"
+docker_build_dir: "{{galaxy_docker_docker_user_home}}/docker_build/"
 bgruening_galaxy_stable_version: latest
 docker_image_changed_uids: "galaxy_stable_changed_uids:{{bgruening_galaxy_stable_version}}"
 # firewall, nginx and ports
@@ -100,14 +102,15 @@ delete_backup_files: False
 galaxy_docker_db_format: "custom" # other options 'plain' and 'tar'
 galaxy_docker_db_compression_level: "{{(galaxy_docker_db_format=='custom') | ternary('6','0')}}"
 galaxy_docker_db_restore_command: "{{(galaxy_docker_db_format=='plain') | ternary('psql','pg_restore -v')}}"
-galaxy_docker_db_input_file_flag: "{{(galaxy_docker_db_format=='plain') | ternary('-f','')}}"
+galaxy_docker_db_input_file_flag: "{(galaxy_docker_db_format=='plain') | ternary('-f','')}"
 
 galaxy_docker_extracted_db_filename: "galaxy_database.{{ansible_date_time.iso8601}}.dump"
-galaxy_docker_extracted_db_location: "/home/{{galaxy_docker_docker_user}}/database_extract"
+galaxy_docker_extracted_db_location: "{{galaxy_docker_docker_user_home}}/database_extract"
 
-galaxy_docker_imported_db_location: "/home/{{galaxy_docker_web_user}}/database/"
-galaxy_docker_empty_database_script: "/home/{{galaxy_docker_database_user}}/new_empty_db"
+galaxy_docker_imported_db_location: "{{galaxy_docker_web_user_home}}/database/"
+galaxy_docker_empty_database_script: "{{galaxy_docker_database_user_home}}/new_empty_db"
 
+galaxy_docker_backup_location: "{{galaxy_docker_docker_user_home}}/backups"
 
 # defaults for installtools
 galaxy_docker_tool_dir: "/tmp/galaxy_tool_lists"
@@ -120,7 +123,7 @@ galaxy_docker_genomes_dest: "{{docker_export_location}}/genomes"
 # Ephemeris can be installed from git if extra functionality is needed which is not in the pypi package yet.
 galaxy_docker_ephemeris_repo: "https://github.com/galaxyproject/ephemeris.git"
 galaxy_docker_ephemeris_branch: "master"
-galaxy_docker_ephemeris_dir: "/home/{{galaxy_docker_docker_user}}/ephemeris"
+galaxy_docker_ephemeris_dir: "{{galaxy_docker_docker_user_home}}/ephemeris"
 ephemeris_from_git: False
 
 #defaults for upgrade
