add setting to expose ftp and sftp port

--- a/host_vars/cluster_example_host/files.settings
+++ b/host_vars/cluster_example_host/files.settings
@@ -1,9 +1,1 @@
-
-tool_list_dir: "{{playbook_dir}}/files/{{ inventory_hostname }}/tools/"
-backup_db_dir: "{{ inventory_hostname }}/backup_db"
-insert_db_dir: "{{ inventory_hostname }}/insert_db"
-ssh_dir: "{{playbook_dir}}/files/{{ inventory_hostname }}/ssh"
-welcome_dir: "{{playbook_dir}}/files/{{ inventory_hostname }}/welcome/"
-genomes_dir: "{{playbook_dir}}/files/{{inventory_hostname}}/genomes/"
-dbkeys_list_dir: "{{playbook_dir}}/files/{{inventory_hostname}}/dbkeys/"
-docker_custom_image_dir: "files/{{inventory_hostname}}/docker_custom_image/"
+../example_host/files.settings
