--- a/host_vars/cluster_example_host/ldap.settings
+++ b/host_vars/cluster_example_host/ldap.settings
@@ -1,5 +1,1 @@
-ldap_settings:
-  server: "ldap://dc1.example.com"
-  search_base: "dc=dc1,dc=example,dc=com"
-  search_user: "ldapsearch"
-  search_password: "beyondsecretwithmanycharacters"
+../example_host/ldap.settings
