--- a/host_vars/cluster_example_host/upgrade.settings
+++ b/host_vars/cluster_example_host/upgrade.settings
@@ -1,11 +1,1 @@
-overwrite_config_files: False
-
-test_upgrade_settings:
-  docker_image: "bgruening/galaxy-stable:17.05"
-  docker_container_name: test_upgrade_galaxy
-  docker_export_location: "/data/galaxy/test_upgrade_galaxy/galaxy_storage"
-  ufw_profile: test_upgrade_galaxy
-  galaxy_web_port: 8888
-  public_galaxy_web_port: 8880
-  galaxy_brand: "Test upgrade of Galaxy to 17.05"
-
+../example_host/upgrade.settings
