--- a/test/vagrant/ubuntu-16.04/Vagrantfile
+++ b/test/vagrant/ubuntu-16.04/Vagrantfile
@@ -21,6 +21,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # within the machine from a port on the host machine. In the example below,
   # accessing "localhost:8080" will access port 80 on the guest machine.
   config.vm.network "forwarded_port", guest: 80, host: 8081
+  config.vm.network "forwarded_port", guest: 8022, host: 8122
   config.vm.network "forwarded_port", guest: 8880, host: 8881
   config.vm.network "forwarded_port", guest: 22, host: 2201, id: 'ssh'
 
