--- a/host_vars/cluster_example_host/cluster.settings
+++ b/host_vars/cluster_example_host/cluster.settings
@@ -4,3 +4,6 @@ galaxy_cluster_virtualenv: "{{galaxy_shared_cluster_directory}}/galaxy_venv"
 cluster_environment_variables:
   LC_ALL: "en_US.UTF-8"
 galaxy_shared_cluster_directory: "/exports/galaxy"
+
+galaxy_cluster_registered_user_concurrent_jobs: 2
+galaxy_cluster_anonymous_user_concurrent_jobs: 1
