--- a/roles/galaxy-docker/defaults/main.yml
+++ b/roles/galaxy-docker/defaults/main.yml
@@ -97,6 +97,12 @@ delete_files: False
 delete_test_upgrade: False
 delete_backup_files: False
 
+# Cluster defaults
+galaxy_cluster_registered_user_concurrent_jobs: 2
+galaxy_cluster_anonymous_user_concurrent_jobs: 1
+cluster_embed_metadata_in_job: True
+#cluster_environment_variables: {}
+
 # defaults for databases
 
 ## Defaults are to use custom format. Which is compressed and uses pg_restore to recover.
