--- a/roles/galaxy-docker/tasks/backups/extractdb.yml
+++ b/roles/galaxy-docker/tasks/backups/extractdb.yml
@@ -14,7 +14,7 @@
 # ansible control host
 
 - name: register whether the container is running
-  command: "docker inspect -f {{inspect}} {{docker_container_name}}"
+  command: "docker inspect -f {{inspect}} {{galaxy_docker_container_name}}"
   vars:
     inspect: !unsafe '{{.State.Running}}'
   register: docker_running
@@ -26,9 +26,9 @@
 
 - name: Make sure the docker container is started
   docker_container:
-    name: "{{docker_container_name}}"
-    volumes: "{{docker_export_location}}:/export/"
-    image: "{{docker_image}}"
+    name: "{{galaxy_docker_container_name}}"
+    volumes: "{{galaxy_docker_export_location}}:/export/"
+    image: "{{galaxy_docker_docker_image}}"
     state: started
   when: not docker_running.stdout
 
@@ -48,7 +48,7 @@
     - touch
 
 - name: Check if postgres is online
-  command: "docker exec {{docker_container_name}} service postgresql status"
+  command: "docker exec {{galaxy_docker_container_name}} service postgresql status"
   register: result
   until: '"online" in result.stdout'
   retries: 20
@@ -56,7 +56,7 @@
 - name: Dump database in export folder
   shell: "docker exec -u {{user}} {{name}} {{command}} >> {{file}}"
   vars:
-    name: "{{docker_container_name}}"
+    name: "{{galaxy_docker_container_name}}"
     command: "pg_dump {{galaxy_docker_container_database_name}} --format={{galaxy_docker_db_format}} -Z {{galaxy_docker_db_compression_level}}"
     user: "{{galaxy_docker_database_user}}"
     file: "{{galaxy_docker_extracted_db_location}}/{{galaxy_docker_extracted_db_filename}}"
