--- a/roles/galaxy-docker/tasks/template_galaxy_settings/addldap.yml
+++ b/roles/galaxy-docker/tasks/template_galaxy_settings/addldap.yml
@@ -9,7 +9,7 @@
 
 - name: Create auth_conf.xml file in config folder
   template:
-    dest: "{{docker_export_location}}/galaxy-central/config/auth_conf.xml"
+    dest: "{{galaxy_docker_export_location}}/galaxy-central/config/auth_conf.xml"
     force: yes
     src: auth_conf.xml.j2
     mode: 0700
