--- a/roles/galaxy-docker/tasks/upgrade/add_new_config.yml
+++ b/roles/galaxy-docker/tasks/upgrade/add_new_config.yml
@@ -6,5 +6,5 @@
 - name: Add new config files
   command: "rsync -p -r {{no_overwrite | default('--ignore-existing')}} {{src}} {{dest}}"
   vars:
-    src: "{{docker_export_location}}/.distribution_config/"
-    dest: "{{docker_export_location}}/galaxy-central/config"
+    src: "{{galaxy_docker_export_location}}/.distribution_config/"
+    dest: "{{galaxy_docker_export_location}}/galaxy-central/config"
