--- a/roles/galaxy-docker/handlers/restart_galaxy_in_container.yml
+++ b/roles/galaxy-docker/handlers/restart_galaxy_in_container.yml
@@ -10,7 +10,7 @@
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
 
 - name: restart galaxy in container
-  command: "docker exec {{docker_container_name}} {{command}}"
+  command: "docker exec {{galaxy_docker_container_name}} {{command}}"
   vars:
     command: "supervisorctl restart {{supervisorctl_galaxy | default('galaxy')}}:*"
   notify: check if galaxy has started
