--- a/roles/galaxy-docker/tasks/prepare_docker/create_export_folder.yml
+++ b/roles/galaxy-docker/tasks/prepare_docker/create_export_folder.yml
@@ -14,6 +14,6 @@
 
 - name: Check if export folder is created with right permissions
   file:
-    path: "{{docker_export_location}}"
+    path: "{{galaxy_docker_export_location}}"
     state: directory
-    mode: "{{galaxy_docker_export_location_mode}}"
+    mode: "{{galaxy_galaxy_docker_export_location_mode}}"
