--- a/roles/galaxy-docker/tasks/prerequisites/create_export_folder.yml
+++ b/roles/galaxy-docker/tasks/prerequisites/create_export_folder.yml
@@ -11,8 +11,8 @@
 
 - name: Make sure export location exists
   file:
-    path: "{{docker_export_location}}"
+    path: "{{galaxy_docker_export_location}}"
     state: directory
     group: "{{galaxy_docker_web_group_id}}"
     owner: "{{galaxy_docker_web_user}}"
-    mode: "{{galaxy_docker_export_location_mode}}"
+    mode: "{{galaxy_galaxy_docker_export_location_mode}}"
