--- a/roles/galaxy-docker/tasks/provision/start_provision_container.yml
+++ b/roles/galaxy-docker/tasks/provision/start_provision_container.yml
@@ -44,9 +44,9 @@
   docker_container:
     env_file: "{{docker_environment_file_location}}"
     volumes: "{{docker_mounted_volumes}}"
-    image: "{{docker_image}}"
+    image: "{{galaxy_docker_docker_image}}"
     name: "{{docker_provision_container_name}}"
-    hostname: "{{docker_container_hostname}}"
+    hostname: "{{galaxy_docker_container_hostname}}"
     published_ports: "127.0.0.1:{{galaxy_docker_provision_port}}:80"
     state: started
     restart: yes
