--- a/test/host_vars/cluster-test/galaxy.settings
+++ b/test/host_vars/cluster-test/galaxy.settings
@@ -24,11 +24,11 @@ optional_environment_settings:
   # Set directories to cluster file system
   GALAXY_CONFIG_CLUSTER_FILES_DIRECTORY: "{{galaxy_docker_shared_cluster_directory}}/job_scripts"
   GALAXY_CONFIG_NEW_FILE_PATH: "{{galaxy_docker_shared_cluster_directory}}/tmp"
-  GALAXY_CONFIG_TOOL_DEPENDENCY_DIR: "{{docker_export_location}}/tool_deps"
+  GALAXY_CONFIG_TOOL_DEPENDENCY_DIR: "{{galaxy_docker_export_location}}/tool_deps"
   GALAXY_CONFIG_CONDA_PREFIX: "{{galaxy_docker_shared_cluster_directory}}/_conda"
-  GALAXY_CONFIG_TOOL_DEPENDENCY_CACHE_DIR: "{{docker_export_location}}/tool_deps/_cache"
-  GALAXY_CONFIG_JOB_WORKING_DIRECTORY: "{{docker_export_location}}/galaxy-central/database/job_working_directory"
-  GALAXY_CONFIG_FILE_PATH: "{{docker_export_location}}/galaxy-central/database/files"
-  GALAXY_CONFIG_TOOL_PATH: "{{docker_export_location}}/galaxy-central/tools"
-  GALAXY_CONFIG_TOOL_DATA_PATH: "{{docker_export_location}}/galaxy-central/tool-data"
-  GALAXY_CONFIG_SHED_TOOL_DATA_PATH: "{{docker_export_location}}/galaxy-central/tool-data"
+  GALAXY_CONFIG_TOOL_DEPENDENCY_CACHE_DIR: "{{galaxy_docker_export_location}}/tool_deps/_cache"
+  GALAXY_CONFIG_JOB_WORKING_DIRECTORY: "{{galaxy_docker_export_location}}/galaxy-central/database/job_working_directory"
+  GALAXY_CONFIG_FILE_PATH: "{{galaxy_docker_export_location}}/galaxy-central/database/files"
+  GALAXY_CONFIG_TOOL_PATH: "{{galaxy_docker_export_location}}/galaxy-central/tools"
+  GALAXY_CONFIG_TOOL_DATA_PATH: "{{galaxy_docker_export_location}}/galaxy-central/tool-data"
+  GALAXY_CONFIG_SHED_TOOL_DATA_PATH: "{{galaxy_docker_export_location}}/galaxy-central/tool-data"
