--- a/roles/galaxy-docker/tasks/provision/installtools.yml
+++ b/roles/galaxy-docker/tasks/provision/installtools.yml
@@ -20,7 +20,7 @@
 
 - name: Find yml files in tool list directory
   find:
-    paths: "{{tool_list_dir}}"
+    paths: "{{galaxy_docker_tool_list_dir}}"
     patterns:
       - "*.yml"
       - "*.yaml"
