--- a/test/host_vars/cluster-test/files.settings
+++ b/test/host_vars/cluster-test/files.settings
@@ -1,9 +1,9 @@
 
-tool_list_dir: "{{playbook_dir}}/test/files/cluster-test/tools/"
-backup_db_dir: "{{playbook_dir}}/test/files/cluster-test/backup_db"
-insert_db_dir: "{{playbook_dir}}/test/files/cluster-test//insert_db"
-ssh_dir: "{{playbook_dir}}/test/files/{{ inventory_hostname }}/ssh"
-welcome_dir: "{{playbook_dir}}/test/files/cluster-test/welcome/"
-genomes_dir: "{{playbook_dir}}/test/files/cluster-test/genomes/"
-dbkeys_list_dir: "{{playbook_dir}}/test/files/cluster-test/dbkeys/"
-docker_custom_image_dir: "{{playbook_dir}}/test/files/cluster-test/docker_custom_image/"
+galaxy_docker_tool_list_dir: "{{playbook_dir}}/test/files/cluster-test/tools/"
+galaxy_docker_backup_db_dir: "{{playbook_dir}}/test/files/cluster-test/backup_db"
+galaxy_docker_import_db_dir: "{{playbook_dir}}/test/files/cluster-test//insert_db"
+galaxy_docker_ssh_dir: "{{playbook_dir}}/test/files/{{ inventory_hostname }}/ssh"
+galaxy_docker_welcome_dir: "{{playbook_dir}}/test/files/cluster-test/welcome/"
+galaxy_docker_genomes_dir: "{{playbook_dir}}/test/files/cluster-test/genomes/"
+galaxy_docker_dbkeys_list_dir: "{{playbook_dir}}/test/files/cluster-test/dbkeys/"
+galaxy_docker_custom_image_dir: "{{playbook_dir}}/test/files/cluster-test/docker_custom_image/"
