--- a/roles/galaxy-docker/tasks/backups/rsync.yml
+++ b/roles/galaxy-docker/tasks/backups/rsync.yml
@@ -33,7 +33,7 @@
 
 - name: copy public key of backup user to ansible host
   fetch:
-    dest: "{{ssh_dir}}/{{galaxy_docker_docker_user}}_public-key/id_rsa.pub"
+    dest: "{{galaxy_docker_ssh_dir}}/{{galaxy_docker_docker_user}}_public-key/id_rsa.pub"
     flat: yes
     src: "/home/{{galaxy_docker_docker_user}}/{{backup_ssh_key_file}}.pub"
     validate_checksum: yes
